parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> blocks
Rule 2     blocks -> blocks block
Rule 3     blocks -> block
Rule 4     block -> LCURLY statements RCURLY
Rule 5     block -> LCURLY RCURLY
Rule 6     statements -> statements statement
Rule 7     statements -> statement
Rule 8     statement -> WHILE paren block
Rule 9     condition -> IF paren block
Rule 10    condition -> IF paren block ELSE block
Rule 11    statement -> expr SEMI
Rule 12    statement -> condition
Rule 13    expr -> VARIABLE EQUALS expr
Rule 14    expr -> VARIABLE LLIST expr RLIST EQUALS expr
Rule 15    expr -> VARIABLE LLIST expr RLIST
Rule 16    expr -> PRINT paren
Rule 17    expr -> NEGATION expr
Rule 18    expr -> expr CONJUNCTION expr
Rule 19    expr -> expr DISJUNCTION expr
Rule 20    expr -> TRUE
Rule 21    expr -> FALSE
Rule 22    expr -> expr COMPARISON expr
Rule 23    expr -> expr MEMBER expr
Rule 24    expr -> expr EXPONENT expr
Rule 25    expr -> expr PLUS expr
Rule 26    expr -> expr MINUS expr
Rule 27    expr -> expr TIMES expr
Rule 28    expr -> expr DIVIDE expr
Rule 29    expr -> expr INTDIV expr
Rule 30    expr -> expr MODULUS expr
Rule 31    paren -> LPAREN expr RPAREN
Rule 32    expr -> VARIABLE
Rule 33    expr -> NUMBER
Rule 34    expr -> STRING
Rule 35    expr -> list
Rule 36    expr -> tuple
Rule 37    expr -> paren
Rule 38    tuple -> LPAREN listing RPAREN
Rule 39    expr -> TUPLEINDEXING NUMBER tuple
Rule 40    list -> LLIST listing RLIST
Rule 41    list -> LLIST RLIST
Rule 42    listing -> expr COMMA listing
Rule 43    listing -> expr
Rule 44    listing -> expr COMMA
Rule 45    expr -> expr LLIST expr RLIST
Rule 46    expr -> expr CONS expr

Terminals, with rules where they appear

COMMA                : 42 44
COMPARISON           : 22
CONJUNCTION          : 18
CONS                 : 46
DISJUNCTION          : 19
DIVIDE               : 28
ELSE                 : 10
EQUALS               : 13 14
EXPONENT             : 24
FALSE                : 21
IF                   : 9 10
INTDIV               : 29
LCURLY               : 4 5
LLIST                : 14 15 40 41 45
LPAREN               : 31 38
MEMBER               : 23
MINUS                : 26
MODULUS              : 30
NEGATION             : 17
NUMBER               : 33 39
PLUS                 : 25
PRINT                : 16
RCURLY               : 4 5
RLIST                : 14 15 40 41 45
RPAREN               : 31 38
SEMI                 : 11
STRING               : 34
TIMES                : 27
TRUE                 : 20
TUPLEINDEXING        : 39
VARIABLE             : 13 14 15 32
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

block                : 2 3 8 9 10 10
blocks               : 1 2
condition            : 12
expr                 : 11 13 14 14 15 17 18 18 19 19 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 42 43 44 45 45 46 46
list                 : 35
listing              : 38 40 42
paren                : 8 9 10 16 37
program              : 0
statement            : 6 7
statements           : 4 6
tuple                : 36 39

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . blocks
    (2) blocks -> . blocks block
    (3) blocks -> . block
    (4) block -> . LCURLY statements RCURLY
    (5) block -> . LCURLY RCURLY

    LCURLY          shift and go to state 4

    program                        shift and go to state 1
    blocks                         shift and go to state 2
    block                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> blocks .
    (2) blocks -> blocks . block
    (4) block -> . LCURLY statements RCURLY
    (5) block -> . LCURLY RCURLY

    $end            reduce using rule 1 (program -> blocks .)
    LCURLY          shift and go to state 4

    block                          shift and go to state 5

state 3

    (3) blocks -> block .

    LCURLY          reduce using rule 3 (blocks -> block .)
    $end            reduce using rule 3 (blocks -> block .)


state 4

    (4) block -> LCURLY . statements RCURLY
    (5) block -> LCURLY . RCURLY
    (6) statements -> . statements statement
    (7) statements -> . statement
    (8) statement -> . WHILE paren block
    (11) statement -> . expr SEMI
    (12) statement -> . condition
    (13) expr -> . VARIABLE EQUALS expr
    (14) expr -> . VARIABLE LLIST expr RLIST EQUALS expr
    (15) expr -> . VARIABLE LLIST expr RLIST
    (16) expr -> . PRINT paren
    (17) expr -> . NEGATION expr
    (18) expr -> . expr CONJUNCTION expr
    (19) expr -> . expr DISJUNCTION expr
    (20) expr -> . TRUE
    (21) expr -> . FALSE
    (22) expr -> . expr COMPARISON expr
    (23) expr -> . expr MEMBER expr
    (24) expr -> . expr EXPONENT expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr INTDIV expr
    (30) expr -> . expr MODULUS expr
    (32) expr -> . VARIABLE
    (33) expr -> . NUMBER
    (34) expr -> . STRING
    (35) expr -> . list
    (36) expr -> . tuple
    (37) expr -> . paren
    (39) expr -> . TUPLEINDEXING NUMBER tuple
    (45) expr -> . expr LLIST expr RLIST
    (46) expr -> . expr CONS expr
    (9) condition -> . IF paren block
    (10) condition -> . IF paren block ELSE block
    (40) list -> . LLIST listing RLIST
    (41) list -> . LLIST RLIST
    (38) tuple -> . LPAREN listing RPAREN
    (31) paren -> . LPAREN expr RPAREN

    RCURLY          shift and go to state 7
    WHILE           shift and go to state 9
    VARIABLE        shift and go to state 13
    PRINT           shift and go to state 15
    NEGATION        shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    TUPLEINDEXING   shift and go to state 23
    IF              shift and go to state 24
    LLIST           shift and go to state 14
    LPAREN          shift and go to state 25

    statements                     shift and go to state 6
    statement                      shift and go to state 8
    paren                          shift and go to state 10
    expr                           shift and go to state 11
    condition                      shift and go to state 12
    list                           shift and go to state 21
    tuple                          shift and go to state 22

state 5

    (2) blocks -> blocks block .

    LCURLY          reduce using rule 2 (blocks -> blocks block .)
    $end            reduce using rule 2 (blocks -> blocks block .)


state 6

    (4) block -> LCURLY statements . RCURLY
    (6) statements -> statements . statement
    (8) statement -> . WHILE paren block
    (11) statement -> . expr SEMI
    (12) statement -> . condition
    (13) expr -> . VARIABLE EQUALS expr
    (14) expr -> . VARIABLE LLIST expr RLIST EQUALS expr
    (15) expr -> . VARIABLE LLIST expr RLIST
    (16) expr -> . PRINT paren
    (17) expr -> . NEGATION expr
    (18) expr -> . expr CONJUNCTION expr
    (19) expr -> . expr DISJUNCTION expr
    (20) expr -> . TRUE
    (21) expr -> . FALSE
    (22) expr -> . expr COMPARISON expr
    (23) expr -> . expr MEMBER expr
    (24) expr -> . expr EXPONENT expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr INTDIV expr
    (30) expr -> . expr MODULUS expr
    (32) expr -> . VARIABLE
    (33) expr -> . NUMBER
    (34) expr -> . STRING
    (35) expr -> . list
    (36) expr -> . tuple
    (37) expr -> . paren
    (39) expr -> . TUPLEINDEXING NUMBER tuple
    (45) expr -> . expr LLIST expr RLIST
    (46) expr -> . expr CONS expr
    (9) condition -> . IF paren block
    (10) condition -> . IF paren block ELSE block
    (40) list -> . LLIST listing RLIST
    (41) list -> . LLIST RLIST
    (38) tuple -> . LPAREN listing RPAREN
    (31) paren -> . LPAREN expr RPAREN

    RCURLY          shift and go to state 26
    WHILE           shift and go to state 9
    VARIABLE        shift and go to state 13
    PRINT           shift and go to state 15
    NEGATION        shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    TUPLEINDEXING   shift and go to state 23
    IF              shift and go to state 24
    LLIST           shift and go to state 14
    LPAREN          shift and go to state 25

    statement                      shift and go to state 27
    paren                          shift and go to state 10
    expr                           shift and go to state 11
    condition                      shift and go to state 12
    list                           shift and go to state 21
    tuple                          shift and go to state 22

state 7

    (5) block -> LCURLY RCURLY .

    LCURLY          reduce using rule 5 (block -> LCURLY RCURLY .)
    $end            reduce using rule 5 (block -> LCURLY RCURLY .)
    RCURLY          reduce using rule 5 (block -> LCURLY RCURLY .)
    WHILE           reduce using rule 5 (block -> LCURLY RCURLY .)
    VARIABLE        reduce using rule 5 (block -> LCURLY RCURLY .)
    PRINT           reduce using rule 5 (block -> LCURLY RCURLY .)
    NEGATION        reduce using rule 5 (block -> LCURLY RCURLY .)
    TRUE            reduce using rule 5 (block -> LCURLY RCURLY .)
    FALSE           reduce using rule 5 (block -> LCURLY RCURLY .)
    NUMBER          reduce using rule 5 (block -> LCURLY RCURLY .)
    STRING          reduce using rule 5 (block -> LCURLY RCURLY .)
    TUPLEINDEXING   reduce using rule 5 (block -> LCURLY RCURLY .)
    IF              reduce using rule 5 (block -> LCURLY RCURLY .)
    LLIST           reduce using rule 5 (block -> LCURLY RCURLY .)
    LPAREN          reduce using rule 5 (block -> LCURLY RCURLY .)
    ELSE            reduce using rule 5 (block -> LCURLY RCURLY .)


state 8

    (7) statements -> statement .

    RCURLY          reduce using rule 7 (statements -> statement .)
    WHILE           reduce using rule 7 (statements -> statement .)
    VARIABLE        reduce using rule 7 (statements -> statement .)
    PRINT           reduce using rule 7 (statements -> statement .)
    NEGATION        reduce using rule 7 (statements -> statement .)
    TRUE            reduce using rule 7 (statements -> statement .)
    FALSE           reduce using rule 7 (statements -> statement .)
    NUMBER          reduce using rule 7 (statements -> statement .)
    STRING          reduce using rule 7 (statements -> statement .)
    TUPLEINDEXING   reduce using rule 7 (statements -> statement .)
    IF              reduce using rule 7 (statements -> statement .)
    LLIST           reduce using rule 7 (statements -> statement .)
    LPAREN          reduce using rule 7 (statements -> statement .)


state 9

    (8) statement -> WHILE . paren block
    (31) paren -> . LPAREN expr RPAREN

    LPAREN          shift and go to state 29

    paren                          shift and go to state 28

state 10

    (37) expr -> paren .

    SEMI            reduce using rule 37 (expr -> paren .)
    CONJUNCTION     reduce using rule 37 (expr -> paren .)
    DISJUNCTION     reduce using rule 37 (expr -> paren .)
    COMPARISON      reduce using rule 37 (expr -> paren .)
    MEMBER          reduce using rule 37 (expr -> paren .)
    EXPONENT        reduce using rule 37 (expr -> paren .)
    PLUS            reduce using rule 37 (expr -> paren .)
    MINUS           reduce using rule 37 (expr -> paren .)
    TIMES           reduce using rule 37 (expr -> paren .)
    DIVIDE          reduce using rule 37 (expr -> paren .)
    INTDIV          reduce using rule 37 (expr -> paren .)
    MODULUS         reduce using rule 37 (expr -> paren .)
    LLIST           reduce using rule 37 (expr -> paren .)
    CONS            reduce using rule 37 (expr -> paren .)
    COMMA           reduce using rule 37 (expr -> paren .)
    RLIST           reduce using rule 37 (expr -> paren .)
    RPAREN          reduce using rule 37 (expr -> paren .)


state 11

    (11) statement -> expr . SEMI
    (18) expr -> expr . CONJUNCTION expr
    (19) expr -> expr . DISJUNCTION expr
    (22) expr -> expr . COMPARISON expr
    (23) expr -> expr . MEMBER expr
    (24) expr -> expr . EXPONENT expr
    (25) expr -> expr . PLUS expr
    (26) expr -> expr . MINUS expr
    (27) expr -> expr . TIMES expr
    (28) expr -> expr . DIVIDE expr
    (29) expr -> expr . INTDIV expr
    (30) expr -> expr . MODULUS expr
    (45) expr -> expr . LLIST expr RLIST
    (46) expr -> expr . CONS expr

    SEMI            shift and go to state 30
    CONJUNCTION     shift and go to state 31
    DISJUNCTION     shift and go to state 32
    COMPARISON      shift and go to state 33
    MEMBER          shift and go to state 34
    EXPONENT        shift and go to state 35
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    INTDIV          shift and go to state 40
    MODULUS         shift and go to state 41
    LLIST           shift and go to state 42
    CONS            shift and go to state 43


state 12

    (12) statement -> condition .

    RCURLY          reduce using rule 12 (statement -> condition .)
    WHILE           reduce using rule 12 (statement -> condition .)
    VARIABLE        reduce using rule 12 (statement -> condition .)
    PRINT           reduce using rule 12 (statement -> condition .)
    NEGATION        reduce using rule 12 (statement -> condition .)
    TRUE            reduce using rule 12 (statement -> condition .)
    FALSE           reduce using rule 12 (statement -> condition .)
    NUMBER          reduce using rule 12 (statement -> condition .)
    STRING          reduce using rule 12 (statement -> condition .)
    TUPLEINDEXING   reduce using rule 12 (statement -> condition .)
    IF              reduce using rule 12 (statement -> condition .)
    LLIST           reduce using rule 12 (statement -> condition .)
    LPAREN          reduce using rule 12 (statement -> condition .)


state 13

    (13) expr -> VARIABLE . EQUALS expr
    (14) expr -> VARIABLE . LLIST expr RLIST EQUALS expr
    (15) expr -> VARIABLE . LLIST expr RLIST
    (32) expr -> VARIABLE .

  ! shift/reduce conflict for LLIST resolved as shift
    EQUALS          shift and go to state 44
    LLIST           shift and go to state 45
    SEMI            reduce using rule 32 (expr -> VARIABLE .)
    CONJUNCTION     reduce using rule 32 (expr -> VARIABLE .)
    DISJUNCTION     reduce using rule 32 (expr -> VARIABLE .)
    COMPARISON      reduce using rule 32 (expr -> VARIABLE .)
    MEMBER          reduce using rule 32 (expr -> VARIABLE .)
    EXPONENT        reduce using rule 32 (expr -> VARIABLE .)
    PLUS            reduce using rule 32 (expr -> VARIABLE .)
    MINUS           reduce using rule 32 (expr -> VARIABLE .)
    TIMES           reduce using rule 32 (expr -> VARIABLE .)
    DIVIDE          reduce using rule 32 (expr -> VARIABLE .)
    INTDIV          reduce using rule 32 (expr -> VARIABLE .)
    MODULUS         reduce using rule 32 (expr -> VARIABLE .)
    CONS            reduce using rule 32 (expr -> VARIABLE .)
    COMMA           reduce using rule 32 (expr -> VARIABLE .)
    RLIST           reduce using rule 32 (expr -> VARIABLE .)
    RPAREN          reduce using rule 32 (expr -> VARIABLE .)

  ! LLIST           [ reduce using rule 32 (expr -> VARIABLE .) ]


state 14

    (40) list -> LLIST . listing RLIST
    (41) list -> LLIST . RLIST
    (42) listing -> . expr COMMA listing
    (43) listing -> . expr
    (44) listing -> . expr COMMA
    (13) expr -> . VARIABLE EQUALS expr
    (14) expr -> . VARIABLE LLIST expr RLIST EQUALS expr
    (15) expr -> . VARIABLE LLIST expr RLIST
    (16) expr -> . PRINT paren
    (17) expr -> . NEGATION expr
    (18) expr -> . expr CONJUNCTION expr
    (19) expr -> . expr DISJUNCTION expr
    (20) expr -> . TRUE
    (21) expr -> . FALSE
    (22) expr -> . expr COMPARISON expr
    (23) expr -> . expr MEMBER expr
    (24) expr -> . expr EXPONENT expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr INTDIV expr
    (30) expr -> . expr MODULUS expr
    (32) expr -> . VARIABLE
    (33) expr -> . NUMBER
    (34) expr -> . STRING
    (35) expr -> . list
    (36) expr -> . tuple
    (37) expr -> . paren
    (39) expr -> . TUPLEINDEXING NUMBER tuple
    (45) expr -> . expr LLIST expr RLIST
    (46) expr -> . expr CONS expr
    (40) list -> . LLIST listing RLIST
    (41) list -> . LLIST RLIST
    (38) tuple -> . LPAREN listing RPAREN
    (31) paren -> . LPAREN expr RPAREN

    RLIST           shift and go to state 47
    VARIABLE        shift and go to state 13
    PRINT           shift and go to state 15
    NEGATION        shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    TUPLEINDEXING   shift and go to state 23
    LLIST           shift and go to state 14
    LPAREN          shift and go to state 25

    listing                        shift and go to state 46
    expr                           shift and go to state 48
    paren                          shift and go to state 10
    list                           shift and go to state 21
    tuple                          shift and go to state 22

state 15

    (16) expr -> PRINT . paren
    (31) paren -> . LPAREN expr RPAREN

    LPAREN          shift and go to state 29

    paren                          shift and go to state 49

state 16

    (17) expr -> NEGATION . expr
    (13) expr -> . VARIABLE EQUALS expr
    (14) expr -> . VARIABLE LLIST expr RLIST EQUALS expr
    (15) expr -> . VARIABLE LLIST expr RLIST
    (16) expr -> . PRINT paren
    (17) expr -> . NEGATION expr
    (18) expr -> . expr CONJUNCTION expr
    (19) expr -> . expr DISJUNCTION expr
    (20) expr -> . TRUE
    (21) expr -> . FALSE
    (22) expr -> . expr COMPARISON expr
    (23) expr -> . expr MEMBER expr
    (24) expr -> . expr EXPONENT expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr INTDIV expr
    (30) expr -> . expr MODULUS expr
    (32) expr -> . VARIABLE
    (33) expr -> . NUMBER
    (34) expr -> . STRING
    (35) expr -> . list
    (36) expr -> . tuple
    (37) expr -> . paren
    (39) expr -> . TUPLEINDEXING NUMBER tuple
    (45) expr -> . expr LLIST expr RLIST
    (46) expr -> . expr CONS expr
    (40) list -> . LLIST listing RLIST
    (41) list -> . LLIST RLIST
    (38) tuple -> . LPAREN listing RPAREN
    (31) paren -> . LPAREN expr RPAREN

    VARIABLE        shift and go to state 13
    PRINT           shift and go to state 15
    NEGATION        shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    TUPLEINDEXING   shift and go to state 23
    LLIST           shift and go to state 14
    LPAREN          shift and go to state 25

    expr                           shift and go to state 50
    paren                          shift and go to state 10
    list                           shift and go to state 21
    tuple                          shift and go to state 22

state 17

    (20) expr -> TRUE .

    SEMI            reduce using rule 20 (expr -> TRUE .)
    CONJUNCTION     reduce using rule 20 (expr -> TRUE .)
    DISJUNCTION     reduce using rule 20 (expr -> TRUE .)
    COMPARISON      reduce using rule 20 (expr -> TRUE .)
    MEMBER          reduce using rule 20 (expr -> TRUE .)
    EXPONENT        reduce using rule 20 (expr -> TRUE .)
    PLUS            reduce using rule 20 (expr -> TRUE .)
    MINUS           reduce using rule 20 (expr -> TRUE .)
    TIMES           reduce using rule 20 (expr -> TRUE .)
    DIVIDE          reduce using rule 20 (expr -> TRUE .)
    INTDIV          reduce using rule 20 (expr -> TRUE .)
    MODULUS         reduce using rule 20 (expr -> TRUE .)
    LLIST           reduce using rule 20 (expr -> TRUE .)
    CONS            reduce using rule 20 (expr -> TRUE .)
    COMMA           reduce using rule 20 (expr -> TRUE .)
    RLIST           reduce using rule 20 (expr -> TRUE .)
    RPAREN          reduce using rule 20 (expr -> TRUE .)


state 18

    (21) expr -> FALSE .

    SEMI            reduce using rule 21 (expr -> FALSE .)
    CONJUNCTION     reduce using rule 21 (expr -> FALSE .)
    DISJUNCTION     reduce using rule 21 (expr -> FALSE .)
    COMPARISON      reduce using rule 21 (expr -> FALSE .)
    MEMBER          reduce using rule 21 (expr -> FALSE .)
    EXPONENT        reduce using rule 21 (expr -> FALSE .)
    PLUS            reduce using rule 21 (expr -> FALSE .)
    MINUS           reduce using rule 21 (expr -> FALSE .)
    TIMES           reduce using rule 21 (expr -> FALSE .)
    DIVIDE          reduce using rule 21 (expr -> FALSE .)
    INTDIV          reduce using rule 21 (expr -> FALSE .)
    MODULUS         reduce using rule 21 (expr -> FALSE .)
    LLIST           reduce using rule 21 (expr -> FALSE .)
    CONS            reduce using rule 21 (expr -> FALSE .)
    COMMA           reduce using rule 21 (expr -> FALSE .)
    RLIST           reduce using rule 21 (expr -> FALSE .)
    RPAREN          reduce using rule 21 (expr -> FALSE .)


state 19

    (33) expr -> NUMBER .

    SEMI            reduce using rule 33 (expr -> NUMBER .)
    CONJUNCTION     reduce using rule 33 (expr -> NUMBER .)
    DISJUNCTION     reduce using rule 33 (expr -> NUMBER .)
    COMPARISON      reduce using rule 33 (expr -> NUMBER .)
    MEMBER          reduce using rule 33 (expr -> NUMBER .)
    EXPONENT        reduce using rule 33 (expr -> NUMBER .)
    PLUS            reduce using rule 33 (expr -> NUMBER .)
    MINUS           reduce using rule 33 (expr -> NUMBER .)
    TIMES           reduce using rule 33 (expr -> NUMBER .)
    DIVIDE          reduce using rule 33 (expr -> NUMBER .)
    INTDIV          reduce using rule 33 (expr -> NUMBER .)
    MODULUS         reduce using rule 33 (expr -> NUMBER .)
    LLIST           reduce using rule 33 (expr -> NUMBER .)
    CONS            reduce using rule 33 (expr -> NUMBER .)
    COMMA           reduce using rule 33 (expr -> NUMBER .)
    RLIST           reduce using rule 33 (expr -> NUMBER .)
    RPAREN          reduce using rule 33 (expr -> NUMBER .)


state 20

    (34) expr -> STRING .

    SEMI            reduce using rule 34 (expr -> STRING .)
    CONJUNCTION     reduce using rule 34 (expr -> STRING .)
    DISJUNCTION     reduce using rule 34 (expr -> STRING .)
    COMPARISON      reduce using rule 34 (expr -> STRING .)
    MEMBER          reduce using rule 34 (expr -> STRING .)
    EXPONENT        reduce using rule 34 (expr -> STRING .)
    PLUS            reduce using rule 34 (expr -> STRING .)
    MINUS           reduce using rule 34 (expr -> STRING .)
    TIMES           reduce using rule 34 (expr -> STRING .)
    DIVIDE          reduce using rule 34 (expr -> STRING .)
    INTDIV          reduce using rule 34 (expr -> STRING .)
    MODULUS         reduce using rule 34 (expr -> STRING .)
    LLIST           reduce using rule 34 (expr -> STRING .)
    CONS            reduce using rule 34 (expr -> STRING .)
    COMMA           reduce using rule 34 (expr -> STRING .)
    RLIST           reduce using rule 34 (expr -> STRING .)
    RPAREN          reduce using rule 34 (expr -> STRING .)


state 21

    (35) expr -> list .

    SEMI            reduce using rule 35 (expr -> list .)
    CONJUNCTION     reduce using rule 35 (expr -> list .)
    DISJUNCTION     reduce using rule 35 (expr -> list .)
    COMPARISON      reduce using rule 35 (expr -> list .)
    MEMBER          reduce using rule 35 (expr -> list .)
    EXPONENT        reduce using rule 35 (expr -> list .)
    PLUS            reduce using rule 35 (expr -> list .)
    MINUS           reduce using rule 35 (expr -> list .)
    TIMES           reduce using rule 35 (expr -> list .)
    DIVIDE          reduce using rule 35 (expr -> list .)
    INTDIV          reduce using rule 35 (expr -> list .)
    MODULUS         reduce using rule 35 (expr -> list .)
    LLIST           reduce using rule 35 (expr -> list .)
    CONS            reduce using rule 35 (expr -> list .)
    COMMA           reduce using rule 35 (expr -> list .)
    RLIST           reduce using rule 35 (expr -> list .)
    RPAREN          reduce using rule 35 (expr -> list .)


state 22

    (36) expr -> tuple .

    SEMI            reduce using rule 36 (expr -> tuple .)
    CONJUNCTION     reduce using rule 36 (expr -> tuple .)
    DISJUNCTION     reduce using rule 36 (expr -> tuple .)
    COMPARISON      reduce using rule 36 (expr -> tuple .)
    MEMBER          reduce using rule 36 (expr -> tuple .)
    EXPONENT        reduce using rule 36 (expr -> tuple .)
    PLUS            reduce using rule 36 (expr -> tuple .)
    MINUS           reduce using rule 36 (expr -> tuple .)
    TIMES           reduce using rule 36 (expr -> tuple .)
    DIVIDE          reduce using rule 36 (expr -> tuple .)
    INTDIV          reduce using rule 36 (expr -> tuple .)
    MODULUS         reduce using rule 36 (expr -> tuple .)
    LLIST           reduce using rule 36 (expr -> tuple .)
    CONS            reduce using rule 36 (expr -> tuple .)
    COMMA           reduce using rule 36 (expr -> tuple .)
    RLIST           reduce using rule 36 (expr -> tuple .)
    RPAREN          reduce using rule 36 (expr -> tuple .)


state 23

    (39) expr -> TUPLEINDEXING . NUMBER tuple

    NUMBER          shift and go to state 51


state 24

    (9) condition -> IF . paren block
    (10) condition -> IF . paren block ELSE block
    (31) paren -> . LPAREN expr RPAREN

    LPAREN          shift and go to state 29

    paren                          shift and go to state 52

state 25

    (38) tuple -> LPAREN . listing RPAREN
    (31) paren -> LPAREN . expr RPAREN
    (42) listing -> . expr COMMA listing
    (43) listing -> . expr
    (44) listing -> . expr COMMA
    (13) expr -> . VARIABLE EQUALS expr
    (14) expr -> . VARIABLE LLIST expr RLIST EQUALS expr
    (15) expr -> . VARIABLE LLIST expr RLIST
    (16) expr -> . PRINT paren
    (17) expr -> . NEGATION expr
    (18) expr -> . expr CONJUNCTION expr
    (19) expr -> . expr DISJUNCTION expr
    (20) expr -> . TRUE
    (21) expr -> . FALSE
    (22) expr -> . expr COMPARISON expr
    (23) expr -> . expr MEMBER expr
    (24) expr -> . expr EXPONENT expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr INTDIV expr
    (30) expr -> . expr MODULUS expr
    (32) expr -> . VARIABLE
    (33) expr -> . NUMBER
    (34) expr -> . STRING
    (35) expr -> . list
    (36) expr -> . tuple
    (37) expr -> . paren
    (39) expr -> . TUPLEINDEXING NUMBER tuple
    (45) expr -> . expr LLIST expr RLIST
    (46) expr -> . expr CONS expr
    (40) list -> . LLIST listing RLIST
    (41) list -> . LLIST RLIST
    (38) tuple -> . LPAREN listing RPAREN
    (31) paren -> . LPAREN expr RPAREN

    VARIABLE        shift and go to state 13
    PRINT           shift and go to state 15
    NEGATION        shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    TUPLEINDEXING   shift and go to state 23
    LLIST           shift and go to state 14
    LPAREN          shift and go to state 25

    listing                        shift and go to state 53
    expr                           shift and go to state 54
    paren                          shift and go to state 10
    list                           shift and go to state 21
    tuple                          shift and go to state 22

state 26

    (4) block -> LCURLY statements RCURLY .

    LCURLY          reduce using rule 4 (block -> LCURLY statements RCURLY .)
    $end            reduce using rule 4 (block -> LCURLY statements RCURLY .)
    RCURLY          reduce using rule 4 (block -> LCURLY statements RCURLY .)
    WHILE           reduce using rule 4 (block -> LCURLY statements RCURLY .)
    VARIABLE        reduce using rule 4 (block -> LCURLY statements RCURLY .)
    PRINT           reduce using rule 4 (block -> LCURLY statements RCURLY .)
    NEGATION        reduce using rule 4 (block -> LCURLY statements RCURLY .)
    TRUE            reduce using rule 4 (block -> LCURLY statements RCURLY .)
    FALSE           reduce using rule 4 (block -> LCURLY statements RCURLY .)
    NUMBER          reduce using rule 4 (block -> LCURLY statements RCURLY .)
    STRING          reduce using rule 4 (block -> LCURLY statements RCURLY .)
    TUPLEINDEXING   reduce using rule 4 (block -> LCURLY statements RCURLY .)
    IF              reduce using rule 4 (block -> LCURLY statements RCURLY .)
    LLIST           reduce using rule 4 (block -> LCURLY statements RCURLY .)
    LPAREN          reduce using rule 4 (block -> LCURLY statements RCURLY .)
    ELSE            reduce using rule 4 (block -> LCURLY statements RCURLY .)


state 27

    (6) statements -> statements statement .

    RCURLY          reduce using rule 6 (statements -> statements statement .)
    WHILE           reduce using rule 6 (statements -> statements statement .)
    VARIABLE        reduce using rule 6 (statements -> statements statement .)
    PRINT           reduce using rule 6 (statements -> statements statement .)
    NEGATION        reduce using rule 6 (statements -> statements statement .)
    TRUE            reduce using rule 6 (statements -> statements statement .)
    FALSE           reduce using rule 6 (statements -> statements statement .)
    NUMBER          reduce using rule 6 (statements -> statements statement .)
    STRING          reduce using rule 6 (statements -> statements statement .)
    TUPLEINDEXING   reduce using rule 6 (statements -> statements statement .)
    IF              reduce using rule 6 (statements -> statements statement .)
    LLIST           reduce using rule 6 (statements -> statements statement .)
    LPAREN          reduce using rule 6 (statements -> statements statement .)


state 28

    (8) statement -> WHILE paren . block
    (4) block -> . LCURLY statements RCURLY
    (5) block -> . LCURLY RCURLY

    LCURLY          shift and go to state 4

    block                          shift and go to state 55

state 29

    (31) paren -> LPAREN . expr RPAREN
    (13) expr -> . VARIABLE EQUALS expr
    (14) expr -> . VARIABLE LLIST expr RLIST EQUALS expr
    (15) expr -> . VARIABLE LLIST expr RLIST
    (16) expr -> . PRINT paren
    (17) expr -> . NEGATION expr
    (18) expr -> . expr CONJUNCTION expr
    (19) expr -> . expr DISJUNCTION expr
    (20) expr -> . TRUE
    (21) expr -> . FALSE
    (22) expr -> . expr COMPARISON expr
    (23) expr -> . expr MEMBER expr
    (24) expr -> . expr EXPONENT expr
    (25) expr -> . expr PLUS expr
    (26) expr -> . expr MINUS expr
    (27) expr -> . expr TIMES expr
    (28) expr -> . expr DIVIDE expr
    (29) expr -> . expr INTDIV expr
    (30) expr -> . expr MODULUS expr
    (32) expr -> . VARIABLE
    (33) expr -> . NUMBER
    (34) expr -> . STRING
    (35) expr -> . list
    (36) expr -> . tuple
    (37) expr -> . paren
    (39) expr -> . TUPLEINDEXING NUMBER tuple
    (45) expr -> . expr LLIST expr RLIST
    (46) expr -> . expr CONS expr
    (40) list -> . LLIST listing RLIST
    (41) list -> . LLIST RLIST
    (38) tuple -> . LPAREN listing RPAREN
    (31) paren -> . LPAREN expr RPAREN

    VARIABLE        shift and go to state 13
    PRINT           shift and go to state 15
    NEGATION        shift and go to state 16
    TRUE            shift and go to state 17
    FALSE           shift and go to state 18
    NUMBER          shift and go to state 19
    STRING          shift and go to state 20
    TUPLEINDEXING   shift and go to state 23
    LLIST           shift and go to state 14
    LPAREN          shift and go to state 25

    expr                           shift and go to state 56
    paren                          shift and go to state 10
    list                           shift and go to state 21
    tuple                          shift and go to state 22
